force-app/main/default/objects/Checked_Sheet_Pointer__mdt.object
<CustomObject>
    <fields>
        <fullName>Form_Code__c</fullName>
        <label>Form Code</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Form_Name__c</fullName>
        <description>we cannot use the MasterLabel since form names length larger than 40 characters</description>
        <label>Form Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Questions__c</fullName>
        <label>Form Questions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Step_Count__c</fullName>
        <label>Step Count</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Checked Sheet Pointer</label>
</CustomObject>